--- a/ConsoleApplication4/ConsoleApplication4.csproj
+++ b/ConsoleApplication4/ConsoleApplication4.csproj
@@ -41,6 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problem4.cs" />
+    <Compile Include="Problem1.cs" />
+    <Compile Include="Problem2.cs" />
+    <Compile Include="Problem3.cs" />
+    <Compile Include="Problem5.cs" />
+    <Compile Include="Problem6.cs" />
+    <Compile Include="Problem7.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
